[gd_scene load_steps=28 format=4 uid="uid://pq0wnq4oigw2"]

[ext_resource type="Texture2D" uid="uid://dyj06khy2o6nk" path="res://assets/fondo/fondo.jpg" id="1_hrsa5"]
[ext_resource type="PackedScene" uid="uid://rn5hkq2hlf0s" path="res://scenes/personaje.tscn" id="1_s5enk"]
[ext_resource type="Script" uid="uid://dbkuuijpskoq3" path="res://scripts/camera_2d.gd" id="2_67o6f"]
[ext_resource type="PackedScene" uid="uid://c0j8lx3027hap" path="res://scenes/grupo_enemigos.tscn" id="2_birf2"]
[ext_resource type="PackedScene" uid="uid://dvp23w382x2u6" path="res://scenes/enemigo_dirigido.tscn" id="3_5hr2l"]
[ext_resource type="PackedScene" uid="uid://i6o7omlo4jr5" path="res://scenes/power_up.tscn" id="4_5hr2l"]
[ext_resource type="PackedScene" uid="uid://dhdebfxhfcegf" path="res://scenes/monte.tscn" id="6_0pjdr"]
[ext_resource type="PackedScene" uid="uid://cg8pgh3508ifj" path="res://scenes/grupo_enemigos_2.tscn" id="6_qm6nr"]
[ext_resource type="PackedScene" uid="uid://d4fjq1kk5ua7g" path="res://scenes/engranaje.tscn" id="7_0pjdr"]
[ext_resource type="Texture2D" uid="uid://b2moik0gib3ek" path="res://assets/hud/barra_vida.png" id="9_gnqo2"]
[ext_resource type="PackedScene" uid="uid://dv78gaed4mwke" path="res://scenes/meta.tscn" id="10_r6w1h"]
[ext_resource type="Texture2D" uid="uid://b1nnv7y5cqidl" path="res://assets/hud/vida.png" id="10_vwgcu"]
[ext_resource type="Texture2D" uid="uid://b7vhngodrih8h" path="res://assets/hud/tabla_puntos.png" id="11_851hy"]
[ext_resource type="FontFile" uid="uid://bg7ihym4m11ku" path="res://assets/fonts/Kubika Font/Kubika Rough.ttf" id="12_vwgcu"]
[ext_resource type="Script" uid="uid://cagt4j86451vv" path="res://scripts/hud.gd" id="13_0qj6g"]
[ext_resource type="Texture2D" uid="uid://ynlv8r83jl0n" path="res://assets/fondo/tilemap.png" id="13_851hy"]
[ext_resource type="PackedScene" uid="uid://b2y1n332esxmi" path="res://scenes/controles_tactiles.tscn" id="16_r6w1h"]
[ext_resource type="AudioStream" uid="uid://c2jmfj4ra6vrb" path="res://sounds/bgm/Archnet-music-background_mezcla.ogg" id="17_co0c6"]
[ext_resource type="FontFile" uid="uid://bii5qibqyn8m" path="res://assets/fonts/Presets/Kubika.tres" id="18_qx8k3"]

[sub_resource type="LabelSettings" id="LabelSettings_r6w1h"]
font = ExtResource("12_vwgcu")
font_size = 70
outline_size = 8
outline_color = Color(0.06, 0.06, 0.06, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_67o6f"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ag084"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_31big"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_gnqo2"]
normal = Vector2(0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_co0c6"]
texture = ExtResource("13_851hy")
texture_region_size = Vector2i(90, 90)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23, -19, 45, -45, 45, 45, -45, 45)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 45, -45, 45, 45, -45, 45)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 22, -25, 45, 45, -45, 45)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 45, -45, 45, 45, -45, 45)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 45, -45, 45, 45, -45, 45)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 45, -45, 45, 45, -45, 45)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 45, -45, 45, 45, -19, 19)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 45, -45, 45, 45, -45, 45)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-45, -45, 45, -45, 22, 23, -45, 45)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_qm6nr"]
tile_size = Vector2i(90, 90)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 4
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terreno"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_co0c6")

[sub_resource type="LabelSettings" id="LabelSettings_vwgcu"]
line_spacing = 0.0
font = ExtResource("12_vwgcu")
font_size = 50
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[node name="Nivel1" type="Node2D" groups=["BGM"]]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(5760, 0)

[node name="Fondo" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(2880, 540)
texture = ExtResource("1_hrsa5")

[node name="Detalles" type="Node2D" parent="."]

[node name="Monte" parent="Detalles" instance=ExtResource("6_0pjdr")]
position = Vector2(4304, 847)

[node name="Monte2" parent="Detalles" instance=ExtResource("6_0pjdr")]
position = Vector2(6168, 847)
scale = Vector2(1.4, 1.4)

[node name="Monte3" parent="Detalles" instance=ExtResource("6_0pjdr")]
position = Vector2(9045, 847)

[node name="Monte4" parent="Detalles" instance=ExtResource("6_0pjdr")]
position = Vector2(1036, 847)

[node name="Engranaje4" parent="Detalles" instance=ExtResource("7_0pjdr")]
position = Vector2(7938, 977)

[node name="Engranaje3" parent="Detalles" instance=ExtResource("7_0pjdr")]
position = Vector2(3631, 1027)

[node name="Engranaje2" parent="Detalles" instance=ExtResource("7_0pjdr")]
position = Vector2(5684, 939)

[node name="Engranaje" parent="Detalles" instance=ExtResource("7_0pjdr")]
position = Vector2(1866, 1005)

[node name="Label" type="Label" parent="Detalles"]
offset_left = 1472.0
offset_top = 512.0
offset_right = 1658.0
offset_bottom = 583.0
text = "Arriba"
label_settings = SubResource("LabelSettings_r6w1h")

[node name="Label2" type="Label" parent="Detalles"]
offset_left = 3272.0
offset_top = 512.0
offset_right = 3458.0
offset_bottom = 583.0
text = "ABAJO"
label_settings = SubResource("LabelSettings_r6w1h")

[node name="Label3" type="Label" parent="Detalles"]
offset_left = 5128.0
offset_top = 528.0
offset_right = 5369.0
offset_bottom = 622.0
text = "¡CUIDADO¡
AHI VIENEN"
label_settings = SubResource("LabelSettings_r6w1h")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Detalles"]
offset_left = 7512.0
offset_top = 512.0
offset_right = 7797.0
offset_bottom = 680.0
text = "TOMA ESTO
LO NECESITARAS"
label_settings = SubResource("LabelSettings_r6w1h")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Detalles"]
offset_left = 9560.0
offset_top = 504.0
offset_right = 9968.0
offset_bottom = 672.0
text = "LLEGA AL FINAL
RESTAURA LAS ANTENAS"
label_settings = SubResource("LabelSettings_r6w1h")
horizontal_alignment = 1

[node name="Meta" parent="." instance=ExtResource("10_r6w1h")]
position = Vector2(25684, 632)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("2_67o6f")
speed = 400

[node name="Personaje" parent="Camera2D" instance=ExtResource("1_s5enk")]
position = Vector2(-684, -22)
disable_mode = 1
collision_layer = 7
collision_mask = 7

[node name="StaticBody2D" type="StaticBody2D" parent="Camera2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(-960, 0)
shape = SubResource("WorldBoundaryShape2D_67o6f")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(200, 0)
shape = SubResource("WorldBoundaryShape2D_ag084")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(0, 540)
shape = SubResource("WorldBoundaryShape2D_31big")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(0, -540)
shape = SubResource("WorldBoundaryShape2D_gnqo2")

[node name="Enemigos" type="Node2D" parent="."]

[node name="GrupoEnemigos" parent="Enemigos" instance=ExtResource("2_birf2")]
position = Vector2(4864, -32)
scale = Vector2(1.36163, 1)

[node name="GrupoEnemigos2" parent="Enemigos" instance=ExtResource("2_birf2")]
position = Vector2(10288, -80)

[node name="EnemigoDirigido" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(8864, 200)

[node name="EnemigoDirigido2" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(9248, 912)

[node name="EnemigoDirigido3" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(9512, 448)

[node name="GrupoEnemigos3" parent="Enemigos" instance=ExtResource("6_qm6nr")]
position = Vector2(15320, 56)

[node name="GrupoEnemigos4" parent="Enemigos/GrupoEnemigos3" instance=ExtResource("2_birf2")]
position = Vector2(-160, -8)

[node name="EnemigoDirigido4" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(13144, 128)

[node name="EnemigoDirigido5" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(21816, 152)

[node name="EnemigoDirigido6" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(21960, 440)

[node name="EnemigoDirigido7" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(21880, 712)

[node name="EnemigoDirigido8" parent="Enemigos" instance=ExtResource("3_5hr2l")]
position = Vector2(22040, 1032)

[node name="GrupoEnemigos4" parent="Enemigos" instance=ExtResource("2_birf2")]
position = Vector2(21200, -8)

[node name="GrupoEnemigos5" parent="Enemigos" instance=ExtResource("6_qm6nr")]
position = Vector2(21496, 0)

[node name="PowerUps" type="Node2D" parent="."]

[node name="PowerUp" parent="PowerUps" instance=ExtResource("4_5hr2l")]
position = Vector2(15448, 520)

[node name="PowerUp2" parent="PowerUps" instance=ExtResource("4_5hr2l")]
position = Vector2(20296, 528)

[node name="PowerUp3" parent="PowerUps" instance=ExtResource("4_5hr2l")]
position = Vector2(7728, 408)

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["Obstaculos"]]
tile_map_data = PackedByteArray("AAAbAAQAAQAAAAAAAAAbAAUAAQABAAEAAAAaAAUAAQAAAAAAAAAaAAYAAQAAAAEAAAAaAAcAAQABAAEAAAAZAAcAAQAAAAAAAAAZAAgAAQAAAAEAAAAZAAkAAQABAAEAAAAYAAkAAQAAAAAAAAAYAAoAAQABAAEAAAAYAAsAAQABAAEAAAAXAAsAAQAAAAAAAAAXAAwAAQAAAAIAAAAYAAwAAQABAAIAAAAhAAsAAQACAAEAAAAhAAoAAQACAAAAAAAgAAoAAQABAAEAAAAgAAkAAQACAAAAAAAfAAgAAQACAAEAAAAfAAcAAQACAAEAAAAfAAYAAQACAAAAAAAeAAUAAQACAAAAAAAcAAQAAQABAAAAAAAbAAYAAQABAAEAAAAbAAcAAQABAAEAAAAaAAgAAQABAAEAAAAZAAoAAQABAAEAAAAZAAsAAQABAAEAAAAaAAoAAQABAAEAAAAaAAkAAQABAAEAAAAbAAgAAQABAAEAAAAcAAYAAQABAAEAAAAcAAUAAQABAAEAAAAcAAcAAQABAAEAAAAcAAgAAQABAAEAAAAbAAkAAQABAAEAAAAbAAoAAQABAAEAAAAaAAsAAQABAAEAAAAZAAwAAQABAAIAAAAbAAsAAQABAAEAAAAcAAsAAQABAAEAAAAgAAsAAQABAAEAAAAfAAsAAQABAAEAAAAfAAoAAQABAAEAAAAfAAkAAQABAAEAAAAeAAsAAQABAAEAAAAeAAoAAQABAAEAAAAeAAkAAQABAAEAAAAeAAgAAQABAAEAAAAeAAcAAQABAAEAAAAeAAYAAQABAAEAAAAdAAsAAQABAAEAAAAdAAoAAQABAAEAAAAdAAkAAQABAAEAAAAdAAgAAQABAAEAAAAdAAcAAQABAAEAAAAdAAYAAQABAAEAAAAdAAUAAQABAAEAAAAdAAQAAQACAAAAAAAcAAoAAQABAAEAAAAcAAkAAQABAAEAAAAaAAwAAQABAAIAAAAqAP//AQAAAAIAAAArAP//AQABAAAAAAArAAAAAQAAAAEAAAAsAAAAAQABAAEAAAAsAAEAAQABAAEAAAAtAAEAAQABAAEAAAAtAAIAAQABAAEAAAAuAAIAAQABAAEAAAAuAAMAAQABAAEAAAAvAAMAAQABAAEAAAAvAAQAAQABAAEAAAAwAAQAAQABAAEAAAAwAAUAAQABAAEAAAAxAAUAAQACAAEAAAAxAAYAAQACAAEAAAAwAAYAAQABAAEAAAAvAAYAAQABAAEAAAAuAAYAAQABAAEAAAAuAAUAAQABAAEAAAAuAAQAAQABAAEAAAAtAAQAAQABAAEAAAAtAAMAAQABAAEAAAAsAAIAAQAAAAEAAAAsAAMAAQAAAAEAAAAtAAUAAQABAAEAAAAvAAUAAQABAAEAAAArAAEAAQAAAAIAAAAtAAYAAQABAAEAAAAuAAcAAQABAAEAAAAsAAUAAQAAAAEAAAAsAAQAAQAAAAEAAAAsAAYAAQAAAAIAAAAtAAcAAQAAAAIAAAAvAAcAAQABAAEAAAAwAAcAAQABAAIAAAAxAAcAAQACAAIAAAAxAAQAAQACAAEAAAAxAAMAAQACAAEAAAAxAAIAAQABAAEAAAAxAAEAAQABAAEAAAAyAAEAAQACAAEAAAAyAAAAAQABAAEAAAAzAAAAAQACAAIAAAAzAP//AQACAAAAAAAyAAIAAQACAAIAAAAwAAMAAQABAAEAAAAwAAIAAQABAAEAAAAwAAEAAQABAAEAAAAxAAAAAQABAAEAAAAxAP//AQABAAAAAAAvAAIAAQABAAEAAAAvAAEAAQABAAEAAAAvAAAAAQABAAEAAAAvAP//AQABAAAAAAAuAAEAAQABAAEAAAAtAAAAAQABAAEAAAAuAAAAAQABAAEAAAAwAAAAAQABAAEAAAAsAP//AQABAAAAAAAtAP//AQABAAAAAAAuAP//AQABAAAAAAAwAP//AQABAAAAAAAyAP//AQABAAAAAAAhAAwAAQACAAIAAAAgAAwAAQABAAIAAAAfAAwAAQABAAIAAAAeAAwAAQABAAIAAAAdAAwAAQABAAIAAAAcAAwAAQABAAIAAAAbAAwAAQABAAIAAAAvAAgAAQACAAIAAAAuAAgAAQAAAAIAAAA/AAsAAQAAAAAAAABAAAsAAQABAAEAAABAAAoAAQAAAAAAAABBAAoAAQABAAEAAABBAAkAAQAAAAAAAABCAAkAAQABAAAAAAA/AAwAAQABAAIAAAA+AAwAAQAAAAAAAAA+AA0AAQACAAIAAABBAAsAAQABAAEAAABCAAoAAQABAAEAAABDAAkAAQABAAAAAABDAAoAAQABAAEAAABEAAoAAQABAAEAAABEAAsAAQABAAEAAABFAAsAAQABAAEAAABFAAoAAQACAAAAAABEAAkAAQACAAAAAABFAAwAAQABAAIAAABEAAwAAQABAAIAAABDAAwAAQABAAIAAABCAAwAAQABAAIAAABAAAwAAQABAAIAAABBAAwAAQABAAIAAABDAAsAAQABAAEAAABCAAsAAQABAAEAAABGAAwAAQABAAIAAABGAAsAAQACAAAAAABHAAwAAQACAAIAAABJAP//AQAAAAAAAABJAAAAAQABAAEAAABJAAEAAQAAAAIAAABKAAEAAQABAAEAAABKAAIAAQAAAAIAAABLAAIAAQABAAIAAABMAAIAAQACAAIAAABMAAEAAQABAAEAAABNAAEAAQACAAIAAABNAAAAAQACAAEAAABNAP//AQACAAAAAABMAAAAAQABAAEAAABKAAAAAQABAAEAAABKAP//AQABAAAAAABLAAAAAQABAAEAAABLAAEAAQABAAEAAABMAP//AQABAAAAAABLAP//AQABAAAAAABSAAkAAQACAAAAAABSAAoAAQABAAEAAABRAAsAAQABAAEAAABRAAwAAQABAAIAAABQAAwAAQABAAEAAABQAA0AAQACAAIAAABQAAsAAQABAAEAAABRAAoAAQABAAEAAABRAAkAAQAAAAAAAABQAAoAAQAAAAAAAABPAAwAAQAAAAIAAABPAAsAAQAAAAAAAABSAAsAAQABAAEAAABTAAwAAQABAAIAAABTAAsAAQABAAEAAABTAAoAAQACAAAAAABUAAsAAQACAAAAAABUAAwAAQACAAIAAABSAAwAAQABAAIAAABeAP7/AQAAAAAAAABeAP//AQAAAAEAAABfAP//AQABAAEAAABfAAAAAQABAAEAAABfAAEAAQAAAAIAAABgAAEAAQABAAIAAABhAAEAAQABAAIAAABiAAEAAQACAAIAAABjAAAAAQACAAIAAABjAP//AQABAAEAAABkAP//AQACAAIAAABkAP7/AQACAAAAAABjAP7/AQAAAAAAAABiAP//AQABAAEAAABhAP//AQABAAAAAABhAAAAAQABAAEAAABgAAAAAQABAAEAAABiAAAAAQABAAEAAABgAP//AQABAAAAAABfAP7/AQACAAAAAABeAAAAAQAAAAIAAABeAAwAAQAAAAIAAABeAAsAAQAAAAAAAABfAAsAAQABAAEAAABfAAoAAQAAAAAAAABgAAoAAQABAAEAAABgAAkAAQAAAAAAAABhAAkAAQABAAEAAABiAAkAAQACAAAAAABiAAoAAQABAAEAAABjAAoAAQACAAAAAABjAAsAAQACAAEAAABkAAwAAQACAAIAAABjAAwAAQABAAIAAABiAAsAAQABAAEAAABhAAsAAQABAAEAAABhAAoAAQABAAEAAABgAAsAAQABAAEAAABiAAwAAQABAAIAAABhAAwAAQABAAIAAABgAAwAAQABAAIAAABfAAwAAQABAAIAAAByAAkAAQABAAEAAAByAAgAAQACAAAAAABxAAoAAQABAAEAAABxAAsAAQABAAEAAABwAAsAAQABAAEAAABwAAwAAQABAAIAAABvAAwAAQAAAAEAAABvAA0AAQACAAIAAABuAA0AAQAAAAIAAABxAAkAAQAAAAAAAABwAAoAAQAAAAAAAABvAAsAAQAAAAAAAAByAAoAAQABAAEAAABzAAoAAQABAAEAAABzAAsAAQABAAEAAAB0AAsAAQABAAEAAAByAAsAAQABAAEAAABzAAkAAQACAAAAAAB0AAoAAQACAAAAAAB0AAwAAQABAAIAAAB1AAwAAQACAAIAAABzAAwAAQABAAIAAAByAAwAAQABAAIAAABxAAwAAQABAAIAAAB1AAsAAQACAAAAAACCAP//AQABAAAAAACCAAAAAQABAAEAAACCAAEAAQAAAAIAAACDAAEAAQABAAEAAACDAAIAAQACAAIAAACEAAEAAQACAAIAAACEAAAAAQABAAEAAACEAP//AQABAAAAAACDAAAAAQABAAEAAACBAP//AQAAAAEAAACBAAAAAQAAAAIAAACFAAAAAQACAAIAAACFAP//AQABAAAAAACDAP//AQABAAAAAACGAP//AQACAAIAAACIAAkAAQABAAAAAACIAAoAAQABAAEAAACHAAsAAQABAAEAAACHAAwAAQABAAIAAACGAAwAAQABAAEAAACGAA0AAQACAAIAAACIAAsAAQABAAEAAACHAAoAAQAAAAEAAACHAAkAAQAAAAAAAACJAAoAAQABAAEAAACJAAkAAQACAAAAAACKAAoAAQABAAAAAACKAAsAAQABAAEAAACLAAsAAQABAAEAAACMAAsAAQABAAEAAACJAAsAAQABAAEAAACKAAwAAQABAAIAAACLAAwAAQABAAIAAACJAAwAAQABAAIAAACIAAwAAQABAAIAAACGAAsAAQABAAAAAACLAAoAAQABAAAAAACMAAwAAQABAAIAAACMAAoAAQACAAAAAACNAAwAAQABAAIAAACOAAwAAQACAAIAAACNAAsAAQABAAAAAACOAAsAAQACAAAAAACFAAwAAQAAAAIAAACFAAsAAQAAAAAAAACWAP7/AQABAAIAAACXAP//AQAAAAEAAACXAAAAAQAAAAEAAACXAAEAAQAAAAIAAACYAAEAAQABAAEAAACYAAIAAQAAAAIAAACZAAIAAQABAAEAAACZAAMAAQAAAAIAAACaAAMAAQABAAEAAACaAAQAAQAAAAIAAACbAAQAAQABAAEAAACbAAUAAQAAAAIAAACcAAUAAQABAAIAAACdAAUAAQABAAIAAACeAAUAAQACAAIAAACeAAQAAQACAAEAAACeAAMAAQABAAEAAACfAAMAAQACAAIAAACfAAIAAQACAAEAAACfAAEAAQABAAEAAACgAAEAAQACAAIAAACgAAAAAQACAAEAAACgAP//AQABAAEAAAChAP//AQACAAIAAACiAP7/AQACAAIAAAChAP7/AQABAAAAAACgAP7/AQAAAAAAAACfAP//AQABAAAAAACeAP//AQABAAAAAACeAAAAAQABAAEAAACdAAEAAQABAAEAAACdAAIAAQABAAEAAACcAAMAAQABAAEAAACcAAQAAQABAAEAAACbAAMAAQABAAEAAACaAAIAAQABAAEAAACZAAEAAQABAAEAAACZAAAAAQABAAEAAACYAAAAAQABAAEAAACYAP//AQABAAAAAACXAP7/AQACAAAAAACaAAEAAQABAAEAAACbAAIAAQABAAEAAACcAAIAAQABAAEAAACcAAEAAQABAAEAAACcAAAAAQABAAEAAACbAAAAAQABAAEAAACaAAAAAQABAAEAAACdAAAAAQABAAEAAACeAAEAAQABAAEAAACdAAMAAQABAAEAAACeAAIAAQABAAEAAACfAAAAAQABAAEAAACdAAQAAQABAAEAAACbAAEAAQABAAEAAACdAP//AQABAAAAAACcAP//AQABAAAAAACbAP//AQABAAAAAACaAP//AQABAAAAAACZAP//AQABAAAAAACWAA0AAQABAAIAAACWAAwAAQABAAEAAACXAAsAAQABAAEAAACXAAoAAQAAAAAAAACYAAoAAQABAAAAAACZAAkAAQAAAAAAAACaAAkAAQABAAAAAACWAAsAAQAAAAAAAACVAAwAAQAAAAEAAACYAAsAAQABAAEAAACZAAoAAQABAAEAAACbAAkAAQABAAAAAACdAAkAAQABAAAAAACeAAkAAQABAAAAAACfAAkAAQABAAAAAACgAAkAAQACAAAAAACgAAoAAQABAAEAAAChAAoAAQACAAAAAAChAAsAAQABAAEAAACiAAsAAQACAAAAAACiAAwAAQABAAEAAACjAAwAAQACAAAAAACjAA0AAQACAAIAAACgAAsAAQABAAEAAACfAAoAAQABAAEAAACeAAoAAQABAAEAAACdAAoAAQABAAEAAACcAAkAAQABAAAAAACXAAwAAQABAAEAAACYAAwAAQABAAEAAACZAAwAAQABAAEAAACbAAsAAQABAAEAAACaAAwAAQABAAEAAACcAAsAAQABAAEAAACdAAsAAQABAAEAAACcAAoAAQABAAEAAACbAAoAAQABAAEAAACaAAoAAQABAAEAAACaAAsAAQABAAEAAACZAAsAAQABAAEAAACbAAwAAQABAAEAAACcAAwAAQABAAEAAACdAAwAAQABAAEAAACfAAwAAQABAAEAAACeAAwAAQABAAEAAACgAAwAAQABAAEAAAChAAwAAQABAAEAAACeAAsAAQABAAEAAACfAAsAAQABAAEAAACiAA0AAQABAAIAAAChAA0AAQABAAIAAACgAA0AAQABAAIAAACfAA0AAQABAAIAAACeAA0AAQABAAIAAACdAA0AAQABAAIAAACcAA0AAQABAAIAAACbAA0AAQABAAIAAACaAA0AAQABAAIAAACZAA0AAQABAAIAAACYAA0AAQABAAIAAACXAA0AAQABAAIAAACVAA0AAQAAAAIAAAC6AA4AAQACAAIAAAC6AA0AAQAAAAAAAAC7AA0AAQABAAIAAAC7AAwAAQAAAAAAAAC8AAwAAQABAAEAAAC8AAsAAQAAAAAAAAC9AAsAAQACAAEAAAC+AAwAAQACAAAAAAC+AA0AAQABAAIAAAC/AA0AAQACAAAAAAC/AA4AAQACAAIAAAC9AA0AAQABAAIAAAC9AAwAAQABAAEAAAC8AA0AAQABAAIAAAC2AA0AAQACAAIAAAC2AAwAAQACAAAAAAC1AAwAAQABAAEAAAC0AAwAAQABAAAAAACzAAwAAQABAAEAAACzAAsAAQACAAAAAACyAAsAAQABAAEAAACxAAsAAQAAAAAAAACxAAwAAQABAAEAAACwAAwAAQABAAAAAACvAAwAAQAAAAAAAACvAA0AAQABAAIAAACuAA0AAQABAAIAAACtAA0AAQAAAAAAAACtAA4AAQACAAIAAACwAA0AAQABAAIAAACyAAwAAQABAAEAAAC0AA0AAQABAAIAAAC1AA0AAQABAAIAAACzAA0AAQABAAIAAACyAA0AAQABAAIAAACxAA0AAQABAAIAAACyAP7/AQACAAEAAACxAP7/AQAAAAAAAACxAP//AQABAAIAAACyAAAAAQABAAEAAACyAAEAAQAAAAIAAACzAAEAAQABAAIAAAC0AAEAAQABAAIAAAC1AAEAAQABAAIAAAC2AAEAAQACAAIAAAC2AAAAAQABAAEAAAC3AAAAAQACAAIAAAC3AP//AQABAAAAAAC4AP//AQACAAIAAAC2AP//AQABAAAAAAC1AP//AQABAAAAAAC0AP//AQABAAAAAACzAP//AQABAAEAAACyAP//AQABAAEAAAC0AAAAAQABAAEAAAC1AAAAAQABAAEAAACzAAAAAQABAAEAAAC/AP//AQABAAAAAADAAP//AQABAAAAAADAAAAAAQABAAEAAADBAAAAAQACAAEAAADBAP//AQABAAAAAADCAP//AQACAAIAAAC/AAAAAQABAAEAAAC+AAAAAQAAAAEAAAC+AP//AQAAAAAAAADBAAEAAQACAAIAAADAAAEAAQABAAEAAADAAAIAAQACAAIAAAC/AAEAAQABAAEAAAC+AAEAAQAAAAIAAAC/AAIAAQAAAAIAAADJAP7/AQABAAAAAADJAP//AQABAAEAAADJAAAAAQABAAEAAADKAAEAAQABAAEAAADKAAIAAQABAAEAAADKAAMAAQABAAEAAADKAAQAAQABAAEAAADLAAQAAQABAAEAAADLAAUAAQABAAEAAADJAAIAAQABAAEAAADJAAEAAQABAAEAAADIAAAAAQAAAAEAAADIAP//AQAAAAAAAADJAAMAAQAAAAEAAADKAAUAAQABAAEAAADMAAUAAQABAAEAAADMAAQAAQABAAEAAADMAAMAAQABAAEAAADMAAIAAQABAAEAAADNAAIAAQABAAEAAADNAAEAAQABAAEAAADNAAAAAQABAAEAAADOAP//AQABAAAAAADNAP//AQABAAAAAADMAAEAAQABAAEAAADLAAIAAQABAAEAAADLAAEAAQABAAEAAADLAAAAAQABAAEAAADLAP//AQABAAAAAADKAP7/AQACAAAAAADKAP//AQABAAEAAADKAAAAAQABAAEAAADLAAMAAQABAAEAAADMAAAAAQABAAEAAADLAAYAAQABAAEAAADKAAYAAQABAAEAAADKAAcAAQABAAEAAADJAAYAAQAAAAEAAADKAAgAAQAAAAEAAADLAAkAAQABAAIAAADLAAgAAQABAAEAAADMAAgAAQACAAEAAADMAAcAAQACAAEAAADLAAcAAQABAAEAAADJAAQAAQAAAAEAAADJAAUAAQAAAAEAAADIAAEAAQAAAAEAAADIAAIAAQAAAAIAAADJAAcAAQAAAAIAAADMAAYAAQABAAEAAADNAAUAAQACAAEAAADNAAQAAQACAAEAAADNAAMAAQABAAEAAADOAAMAAQACAAIAAADNAAYAAQACAAIAAADOAAIAAQACAAEAAADOAAEAAQACAAEAAADOAAAAAQACAAEAAADPAP//AQACAAIAAADPAP7/AQACAAAAAADMAP//AQABAAAAAADKAAkAAQAAAAIAAADMAAkAAQACAAIAAADYAAQAAQABAAAAAADYAAUAAQABAAEAAADYAAYAAQABAAEAAADXAAYAAQAAAAEAAADXAAcAAQABAAEAAADXAAgAAQABAAEAAADWAAkAAQABAAEAAADWAAoAAQABAAEAAADWAAsAAQABAAEAAADVAAsAAQAAAAEAAADVAAwAAQABAAEAAADVAA0AAQABAAEAAADUAA0AAQAAAAEAAADWAAgAAQAAAAEAAADWAAcAAQAAAAAAAADVAAkAAQAAAAAAAADVAAoAAQAAAAEAAADXAAUAAQAAAAEAAADZAAQAAQACAAAAAADZAAUAAQABAAEAAADaAAUAAQACAAAAAADaAAYAAQACAAEAAADaAAcAAQACAAEAAADaAAgAAQACAAEAAADaAAkAAQACAAEAAADbAAoAAQACAAAAAADbAAsAAQACAAEAAADbAAwAAQACAAEAAADbAA0AAQACAAIAAADaAA0AAQABAAEAAADaAA4AAQACAAIAAADZAA4AAQABAAEAAADZAA8AAQACAAIAAADYAA8AAQABAAIAAADXAA8AAQAAAAIAAADXAA4AAQABAAEAAADWAA4AAQABAAIAAADVAA4AAQABAAIAAADUAA4AAQAAAAIAAADWAA0AAQABAAEAAADXAA0AAQABAAEAAADYAA0AAQABAAEAAADZAA0AAQABAAEAAADZAAwAAQABAAEAAADaAAwAAQABAAEAAADYAAwAAQABAAEAAADXAAwAAQABAAEAAADWAAwAAQABAAEAAADXAAoAAQABAAEAAADYAAoAAQABAAEAAADYAAkAAQABAAEAAADYAAgAAQABAAEAAADZAAcAAQABAAEAAADYAAcAAQABAAEAAADXAAsAAQABAAEAAADXAAkAAQABAAEAAADZAAgAAQABAAEAAADaAAoAAQABAAEAAADaAAsAAQABAAEAAADZAAsAAQABAAEAAADYAAsAAQABAAEAAADZAAkAAQABAAEAAADZAAYAAQABAAEAAADXAAQAAQAAAAAAAADYAA4AAQABAAEAAADZAAoAAQABAAEAAAD3AP7/AQACAAAAAAD3AP//AQAAAAEAAAD4AAAAAQABAAEAAAD5AAAAAQABAAEAAAD5AAEAAQABAAEAAAD6AAEAAQABAAEAAAD6AAAAAQABAAEAAAD7AAAAAQABAAEAAAD7AP//AQABAAEAAAD4AAIAAQABAAIAAAD3AAIAAQAAAAIAAAD3AAEAAQABAAEAAAD3AAAAAQAAAAEAAAD4AAEAAQABAAEAAAD6AP//AQABAAEAAAD5AP//AQABAAEAAAD4AP//AQABAAAAAAD6AAIAAQACAAIAAAD5AAIAAQABAAIAAAD7AAEAAQACAAIAAAD8AAAAAQACAAIAAAD8AP//AQACAAEAAAD8AP7/AQACAAAAAAD7AP7/AQABAAAAAAD6AP7/AQABAAAAAAD5AP7/AQAAAAAAAADjAP7/AQABAAAAAADjAP//AQAAAAIAAADkAP//AQABAAEAAADkAAAAAQAAAAIAAADlAAAAAQABAAIAAADmAAAAAQABAAEAAADmAAEAAQAAAAIAAADnAAEAAQABAAIAAADoAAEAAQABAAIAAADpAAEAAQACAAIAAADpAAAAAQABAAEAAADqAAAAAQABAAIAAADrAAAAAQABAAIAAADsAAAAAQABAAIAAADtAAAAAQACAAIAAADtAP//AQABAAEAAADuAP//AQACAAIAAADuAP7/AQACAAAAAADtAP7/AQABAAAAAADsAP7/AQAAAAAAAADrAP//AQABAAAAAADqAP//AQABAAAAAADpAP//AQABAAAAAADoAP//AQABAAEAAADnAP//AQABAAAAAADmAP//AQABAAAAAADlAP//AQABAAEAAADkAP7/AQABAAAAAADlAP7/AQACAAAAAADnAAAAAQABAAEAAADoAAAAAQABAAEAAADsAP//AQABAAEAAADkAA4AAQACAAIAAADkAA0AAQAAAAAAAADlAA0AAQABAAIAAADlAAwAAQAAAAAAAADmAAwAAQABAAEAAADnAAsAAQAAAAAAAADoAAsAAQABAAAAAADtAAsAAQACAAAAAADuAAwAAQABAAEAAADvAAwAAQABAAAAAADvAA0AAQABAAIAAADwAA0AAQABAAIAAADsAAsAAQABAAAAAADrAAsAAQABAAAAAADqAAsAAQABAAAAAADpAAsAAQABAAAAAADnAAwAAQABAAEAAADmAA0AAQABAAIAAADnAA0AAQABAAIAAADpAA0AAQABAAIAAADoAA0AAQABAAIAAADrAAwAAQABAAEAAADqAA0AAQABAAIAAADtAAwAAQABAAEAAADsAAwAAQABAAEAAADrAA0AAQABAAIAAADqAAwAAQABAAEAAADpAAwAAQABAAEAAADoAAwAAQABAAEAAADxAA0AAQACAAIAAADwAAwAAQACAAAAAADuAA0AAQABAAIAAADtAA0AAQABAAIAAADsAA0AAQABAAIAAAA=")
tile_set = SubResource("TileSet_qm6nr")

[node name="HUD" type="CanvasLayer" parent="." groups=["HUD"]]
script = ExtResource("13_0qj6g")

[node name="BarraVida" type="TextureRect" parent="HUD"]
offset_left = 50.0
offset_top = 50.0
offset_right = 442.0
offset_bottom = 151.0
texture = ExtResource("9_gnqo2")

[node name="TextureRect" type="TextureRect" parent="HUD/BarraVida"]
layout_mode = 0
offset_left = 147.0
offset_top = 37.0
offset_right = 216.0
offset_bottom = 60.0
texture = ExtResource("10_vwgcu")

[node name="TextureRect2" type="TextureRect" parent="HUD/BarraVida"]
layout_mode = 0
offset_left = 224.0
offset_top = 37.0
offset_right = 293.0
offset_bottom = 60.0
texture = ExtResource("10_vwgcu")

[node name="TextureRect3" type="TextureRect" parent="HUD/BarraVida"]
layout_mode = 0
offset_left = 302.0
offset_top = 37.0
offset_right = 371.0
offset_bottom = 60.0
texture = ExtResource("10_vwgcu")

[node name="BarraPuntos" type="TextureRect" parent="HUD"]
offset_left = 1544.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 151.0
texture = ExtResource("11_851hy")

[node name="Puntos" type="Label" parent="HUD/BarraPuntos"]
layout_mode = 0
offset_left = 102.0
offset_top = 26.0
offset_right = 267.0
offset_bottom = 77.0
text = "9550"
label_settings = SubResource("LabelSettings_vwgcu")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="ControlesTactiles" parent="HUD" instance=ExtResource("16_r6w1h")]

[node name="Pausa" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_bottom = 56.0
grow_horizontal = 0
size_flags_horizontal = 0

[node name="ColorRect3" type="ColorRect" parent="HUD/Pausa"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 40.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="ColorRect2" type="ColorRect" parent="HUD/Pausa"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 24.0
offset_right = -16.0
offset_bottom = 32.0
grow_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="HUD/Pausa"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 16.0
grow_horizontal = 0

[node name="MenuPausa" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="HUD/MenuPausa"]
modulate = Color(0.45, 0.45, 0.45, 0.784314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continuar" type="Button" parent="HUD/MenuPausa"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -142.0
offset_right = 202.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("18_qx8k3")
theme_override_font_sizes/font_size = 100
text = "CONTINUAR"

[node name="SalirMenu" type="Button" parent="HUD/MenuPausa"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 10.0
offset_right = 109.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("18_qx8k3")
theme_override_font_sizes/font_size = 100
text = "MENU PRINCIPAL"

[node name="BGM" type="AudioStreamPlayer" parent="." groups=["BGM"]]
stream = ExtResource("17_co0c6")
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="HUD/Pausa" to="HUD" method="_on_pausa_pressed"]
[connection signal="pressed" from="HUD/MenuPausa/Continuar" to="HUD" method="_on_continuar_pressed"]
[connection signal="pressed" from="HUD/MenuPausa/SalirMenu" to="HUD" method="_on_salir_menu_pressed"]
